--- a/README.org
+++ b/README.org
@@ -4,6 +4,8 @@ A major mode for editing [[https://vuejs.org/][Vue]] components. Requires Emacs 
 ** Installation
 Clone this repo anywhere you want, probably somewhere in =~/.emacs.d= . Then, add the directory to your =load-path=.
 
+[[./screenshot.png]]
+
 For example:
 #+begin_example
   cd ~/.emacs.d
